[package]
name = "ask"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Engineers-Hub <ask@engineers-hub.ltd>"]
license = "MIT OR Apache-2.0"
description = "High-performance CLI for Claude AI"
repository = "https://github.com/engineers-hub/ask"
keywords = ["claude", "ai", "cli", "anthropic"]
categories = ["command-line-utilities"]

[[bin]]
name = "ask"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP Client & Async
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
confy = "0.5"
directories = "5.0"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal UI
colored = "2.0"
indicatif = "0.17"
crossterm = "0.27"
atty = "0.2"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

# Security
keyring = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockito = "1.0"
criterion = "0.5"

# [[bench]]
# name = "performance"
# harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
debug = true
